Adds a helper method to create an additional workflow in the repository

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
           "default": "",
           "description": "The GitHub token used to authenticate the action."
         },
+         "github-actions-generator.openApiKey": {
+          "type": "string",
+          "default": "",
+          "description": "The Open API Key used to request a code review."
+        },
         "github-actions-generator.configurationPath": {
           "type": "string",
           "default": "",
@@ -74,6 +79,7 @@
     "typescript-eslint": "^8.52.0"
   },
   "dependencies": {
+    "libsodium-wrappers": "^0.8.1",
     "simple-git": "^3.30.0"
   }
 }
