--- a/src/workflows/open-ai-reviewer.yml
+++ b/src/workflows/open-ai-reviewer.yml
@@ -1,38 +1,20 @@
-name: OpenAI Reviewer
-
-permissions:
-  contents: read
-  pull-requests: write
-
+name: Code Review with OpenAI
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened]
-  pull_request_review_comment:
-    types: [created]
-
-concurrency:
-  group:
-    ${{ github.repository }}-${{ github.event.number || github.head_ref ||
-    github.sha }}-${{ github.workflow }}-${{ github.event_name ==
-    'pull_request_review_comment' && 'pr_comment' || 'pr' }}
-  cancel-in-progress: ${{ github.event_name != 'pull_request_review_comment' }}
-
+  pull_request:
+    types:
+      - opened
+      - synchronize
+permissions: write-all
 jobs:
-  review:
+  code_review:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Code Review
+        uses: yuri-val/ai-codereviewer@main
         with:
-          repository: ${{github.event.pull_request.head.repo.full_name}}
-          ref: ${{github.event.pull_request.head.ref}}
-          submodules: false
-      - uses: ./
-        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        with:
-          debug: true
-          review_comment_lgtm: false
-          path_filters: |
-            !dist/**
-            !**/*.lock
+          OPENAI_API_MODEL: "gpt-4o-mini"
+          exclude: "**/*.lock,dist/**,**/*.json"
